[gd_scene load_steps=11 format=2]

[ext_resource path="res://Ball/Ball3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball/Ball_PhysicsMaterial.tres" type="PhysicsMaterial" id=2]
[ext_resource path="res://Game/GameArea.gd" type="Script" id=3]
[ext_resource path="res://Blocks/BlockSpawner3D.gd" type="Script" id=4]
[ext_resource path="res://Game/GameUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/Player3D.tscn" type="PackedScene" id=9]
[ext_resource path="res://Blocks/Block3D.tscn" type="PackedScene" id=10]

[sub_resource type="Environment" id=3]
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.75

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 50, 5 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 50, 5, 5 )

[node name="GameArea" type="Spatial"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 9 )]
speed = 50.0

[node name="Ball" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 50, 0 )
physics_material_override = ExtResource( 2 )
gravity_scale = 0.0

[node name="Board" type="Spatial" parent="."]
script = ExtResource( 4 )
ball_path = NodePath("../Ball")

[node name="Block" parent="Board" instance=ExtResource( 10 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 50, 75, 0 )

[node name="GameUI" parent="." instance=ExtResource( 6 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 50, 3 )
environment = SubResource( 3 )
projection = 1
size = 100.0

[node name="Borders" type="RigidBody" parent="." groups=[
"walls",
]]
mode = 1
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true

[node name="Left" type="CollisionShape" parent="Borders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0 )
shape = SubResource( 1 )

[node name="Right" type="CollisionShape" parent="Borders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 50, 0 )
shape = SubResource( 1 )

[node name="Top" type="CollisionShape" parent="Borders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 100, 0 )
shape = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.20996, 0.97771, 0, -0.97771, 0.20996, 0, 2.49256, 0 )
[connection signal="reset" from="." to="Board" method="_on_GameArea_reset"]
[connection signal="reset" from="." to="Player" method="_on_GameArea_reset"]
[connection signal="reset" from="." to="Ball" method="_on_GameArea_reset"]
[connection signal="ball_hit_player" from="Player" to="." method="_on_Player_ball_hit_player"]
[connection signal="boost_cooldown_end" from="Player" to="GameUI" method="_on_Player_boost_cooldown_end"]
[connection signal="boost_cooldown_tick" from="Player" to="GameUI" method="_on_Player_boost_cooldown_tick"]
[connection signal="recall_ability_invoked" from="Player" to="Ball" method="_on_Player_recall_ability_invoked"]
[connection signal="recall_cooldown_end" from="Player" to="GameUI" method="_on_Player_recall_cooldown_end"]
[connection signal="recall_cooldown_tick" from="Player" to="GameUI" method="_on_Player_recall_cooldown_tick"]
[connection signal="energy_update" from="Ball" to="GameUI" method="_on_Ball_energy_update"]
[connection signal="launched" from="Ball" to="." method="_on_Ball_launched"]
[connection signal="lost" from="Ball" to="." method="_on_Ball_lost"]
[connection signal="all_blocks_destroyed" from="Board" to="." method="_on_Board_all_blocks_destroyed"]
[connection signal="ball_powerup_obtained" from="Board" to="." method="_on_Board_ball_powerup_obtained"]
[connection signal="block_destroyed" from="Board" to="." method="_on_Board_block_destroyed"]
[connection signal="shadow_powerup_obtained" from="Board" to="." method="_on_Board_shadow_powerup_obtained"]
